--- a/sass/main.css
+++ b/sass/main.css
@@ -1,27 +1,39 @@
 @charset "UTF-8";
 /* Mise en page du header */
 .header-logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   width: 40%;
   padding: 12px;
 }
 
-/* Mise en page du formulaire dans le header */
-form {
+.header-logo img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
+/* Mise en page du formulaire dans le header */
 .formulaire {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: lightgrey;
   padding: 12px;
 }
@@ -67,6 +79,11 @@ form {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  text-align: center;
+  background-color: #f2f2f2;
+  padding-right: 20px;
+  padding-left: 20px;
+  padding-bottom: 30px;
 }
 
 button {
@@ -79,7 +96,39 @@ button {
 
 /* Paramètres des box */
 .box {
-  padding: 20px;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  justify-items: center;
+  width: 100%;
+  margin-bottom: 30px;
+  border-radius: 15px;
+  -webkit-box-shadow: 5px 5px 10px grey;
+          box-shadow: 5px 5px 10px grey;
+}
+
+.fonctionnement {
+  padding: 30px 20px;
+}
+
+.fonctionnement-orga {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.fonctionnement-box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -88,13 +137,76 @@ button {
           justify-content: flex-start;
 }
 
-html {
-  margin-left: auto;
-  margin-right: auto;
+.fonctionnement-box a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  text-decoration: none;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  width: 100%;
 }
 
-/* Organisation des vignettes */
+.fonctionnement-box-number {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: -15px;
+  width: 30px;
+  height: 30px;
+  min-width: 30px;
+  min-height: 30px;
+  border-radius: 50%;
+  color: white;
+  background-color: purple;
+}
+
+.fonctionnement-box-icone {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 20%;
+  font-size: 30px;
+  color: grey;
+}
+
+.fonctionnement-box-txt {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0px 20px;
+  font-weight: bold;
+  color: black;
+}
+
 .restaurants {
+  padding: 30px 20px;
+  /* Organisation des vignettes */
+}
+
+.restaurants-orga {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -102,39 +214,30 @@ html {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .restaurants ul {
   list-style-type: none;
-  padding-left: 0;
-}
-
-.restaurants-orga-card {
   width: 100%;
-  height: auto;
-  margin: 20px 0;
-  background-color: white;
-  -webkit-box-shadow: 2px 5px 5px grey;
-          box-shadow: 2px 5px 5px grey;
-  border-radius: 15px;
+  padding-left: 0;
 }
 
 .restaurants-orga-card a {
   width: 100%;
   height: auto;
   text-decoration: none;
-  min-height: 100%;
-  max-height: 100%;
   color: black;
 }
 
 .restaurants-orga-card span {
   position: relative;
   bottom: 165px;
-  left: 230px;
+  left: 260px;
   background-color: lightgreen;
   color: green;
   font-weight: bold;
@@ -195,7 +298,7 @@ html {
   margin-top: 0;
 }
 
-.heart {
+.restaurants .heart {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -203,5 +306,55 @@ html {
       -ms-flex-align: center;
           align-items: center;
   font-size: 60px;
+}
+
+.footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  padding: 30px 20px;
+  background-color: darkslategrey;
+  color: white;
+}
+
+.footer-logo {
+  width: 40%;
+  font-size: 10px;
+  color: white;
+}
+
+.footer-logo img {
+  width: 100%;
+  height: 100%;
+}
+
+.footer-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer-info span {
+  width: 5%;
+}
+
+.footer-info p {
+  margin-left: 15px;
 }
 /*# sourceMappingURL=main.css.map */
