--- a/sass/layouts/_box.scss
+++ b/sass/layouts/_box.scss
@@ -1,8 +1,11 @@
-/* Paramètres des box */ 
+/* Paramètres des box */
 
 .box {
-    padding: 20px;
-    display: flex;
-    justify-content: flex-start;
-
+    display: grid;
+    align-items: center;
+    justify-items: center;
+    width: 100%;
+    margin-bottom: 30px;
+    border-radius: 15px;
+    box-shadow: 5px 5px 10px grey;
 }
