--- a/sass/layouts/_header-reserv.scss
+++ b/sass/layouts/_header-reserv.scss
@@ -5,6 +5,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    background-color: #f2f2f2;
+    padding-right: 20px;
+    padding-left: 20px;
+    padding-bottom: 30px;
 }
 
 button {
