--- a/sass/layouts/_box.scss
+++ b/sass/layouts/_box.scss
@@ -4,6 +4,7 @@
     display: grid;
     align-items: center;
     justify-items: center;
+    height: auto;
     width: 100%;
     margin-bottom: 30px;
     border-radius: 15px;
