--- a/sass/layouts/_restaurants.scss
+++ b/sass/layouts/_restaurants.scss
@@ -1,5 +1,6 @@
 .restaurants {
     padding: 30px 20px;
+    background-color: #f2f2f2;
 
     &-orga {
         display: flex;
@@ -79,6 +80,6 @@
     .heart {
         display: flex;
         align-items: center;
-        font-size: 60px;
+        font-size: 40px;
     }
 }
