--- a/sass/layouts/_header-form.scss
+++ b/sass/layouts/_header-form.scss
@@ -9,6 +9,7 @@
     padding: 12px;
     width: 100%;
     box-shadow: 0 0 1em grey;
+    padding: 0;
 
     &-recherche {
         text-decoration: none;
