--- a/sass/layouts/_fonctionnement.scss
+++ b/sass/layouts/_fonctionnement.scss
@@ -6,6 +6,7 @@
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
+        padding: 0;
     }
 
     &-box {
