--- a/sass/layouts/_header-reserv.scss
+++ b/sass/layouts/_header-reserv.scss
@@ -23,4 +23,5 @@ button {
     background: linear-gradient(#FF79DA, #9356DC);
     border: transparent;
     padding: 20px;
+    font-family: 'Shrikhand', sans-serif;
 }
