--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,13 @@
 h1 {
   font-size: 22px;
   font-weight: bold;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
   margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 /* Mise en page du header */
@@ -15,7 +18,6 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0;
 }
 
 .header-logo {
@@ -37,7 +39,7 @@ header {
   background-color: lightgrey;
   padding: 12px;
   width: 100%;
-  box-shadow: 0 0 1em grey;
+  box-shadow: inset 0em 0.2em 2px grey;
 }
 .formulaire-recherche {
   text-decoration: none;
@@ -47,8 +49,11 @@ header {
 }
 
 ::placeholder {
+  text-align: center;
   font-weight: bold;
   color: black;
+  font-size: 14px;
+  font-family: "Shrikhand", sans-serif;
 }
 
 /* Mise en page 3ème partie du header */
@@ -74,6 +79,7 @@ button {
   background: linear-gradient(#FF79DA, #9356DC);
   border: transparent;
   padding: 20px;
+  font-family: "Shrikhand", sans-serif;
 }
 
 /* Paramètres des box */
