--- a/sass/base/_titles.scss
+++ b/sass/base/_titles.scss
@@ -3,9 +3,11 @@
 h1 {
     font-size: 22px;
     font-weight: bold;
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
