--- a/sass/base/_titles.scss
+++ b/sass/base/_titles.scss
@@ -1,8 +1,13 @@
 /* Paramètres généraux du site web Ohmyfood */
 
 h1 {
-    font-size: 22px;
+    font-size: 21px;
     font-weight: bold;
+    font-family: 'Roboto', sans-serif;
+}
+
+h2 {
+    font-size: 19px;
     font-family: 'Roboto', sans-serif;
 }
 
