--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,7 @@
 @import "./base/titles";
 @import "./layouts/header-logo.scss";
-@import "./layouts/header-form.scss";
-@import "./layouts/header-reserv.scss";
+@import "./layouts/localisation-form.scss";
+@import "./layouts/reservation.scss";
 @import "./layouts/box.scss";
 @import "./layouts/fonctionnement.scss";
 @import "./layouts/restaurants";
