--- a/sass/layouts/_box.scss
+++ b/sass/layouts/_box.scss
@@ -8,5 +8,5 @@
     width: 100%;
     margin-bottom: 30px;
     border-radius: 15px;
-    box-shadow: 5px 5px 10px grey;
+    box-shadow: 5px 5px 10px rgb(231, 229, 229);
 }
