--- a/sass/layouts/_fonctionnement.scss
+++ b/sass/layouts/_fonctionnement.scss
@@ -11,6 +11,14 @@
     &-box {
         display: flex;
         justify-content: flex-start;
+        background-color: #fcf9f9;
+        padding: 5px 0px;
+        &:hover {
+            background: #e7d2ff;
+            .fonctionnement-box-icone {
+                color: #9356dc;
+            }
+        }
 
 
         & a {
@@ -20,37 +28,37 @@
             flex-wrap: nowrap;
             width: 100%;
         }
-    }
 
-    &-box-number {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-left: -15px;
-        width: 30px;
-        height: 30px;
-        min-width: 30px;
-        min-height: 30px;
-        border-radius: 50%;
-        color: white;
-        background-color: #9356dc;
-    }
+        &-number {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-left: -15px;
+            width: 23px;
+            height: 23px;
+            min-width: 0px;
+            min-height: 0px;
+            border-radius: 50%;
+            color: white;
+            font-size: 15px;
+            background-color: #9356dc;
+        }
 
-    &-box-icone {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 20%;
-        font-size: 30px;
-        color: grey;
-    }
+        &-icone {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 20%;
+            font-size: 20px;
+            color: grey;                
+        }
 
-    &-box-txt {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 0px 20px;
-        font-weight: bold;
-        color: black;
+        &-txt {
+            font-size: 15px;
+            font-weight: bolder;
+            color: black;
+        }
     }
 }
+
+    
