--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -3,19 +3,16 @@
     flex-direction: column;
     justify-content: space-around;
     padding: 30px 20px;
-    background-color: darkslategrey;
+    background-color: rgb(58, 58, 58);
     color: white;
 
     &-logo {
-        width: 40%;
-        font-size: 10px;
-        color: white;
+        width: 35%;
     }
 
     &-logo img {
         width: 100%;
         height: 100%;
-
     }
 
     &-info {
