--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,8 @@
 @import "./base/titles";
-@import "./layouts/header-logo.scss";
-@import "./layouts/localisation-form.scss";
-@import "./layouts/reservation.scss";
-@import "./layouts/box.scss";
-@import "./layouts/fonctionnement.scss";
+@import "./layouts/header-logo";
+@import "./layouts/localisation-form";
+@import "./layouts/reservation";
+@import "./layouts/box";
+@import "./layouts/fonctionnement";
 @import "./layouts/restaurants";
 @import "./layouts/footer";
