--- a/css/style.css
+++ b/css/style.css
@@ -42,9 +42,10 @@ header {
   justify-content: center;
   align-items: center;
   background-color: rgb(231, 229, 229);
-  padding: 12px;
   width: 100%;
   box-shadow: inset 0em 0.1em 2px rgb(184, 184, 184);
+  padding-top: 12px;
+  padding-bottom: 12px;
 }
 .formulaire-localisation {
   padding-left: 30px;
@@ -179,13 +180,19 @@ button {
 }
 .restaurants-orga-card a span {
   position: relative;
-  bottom: 165px;
-  left: 235px;
+  width: fit-content;
+  top: 3rem;
+  right: 1rem;
   background-color: #99E2D0;
   color: green;
   font-weight: bold;
   padding: 6px 10px;
   border-radius: 3px;
+}
+.restaurants .img-new {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 .restaurants ul {
   list-style-type: none;
@@ -193,6 +200,7 @@ button {
   padding-left: 0;
 }
 .restaurants-orga-card-image {
+  z-index: 1;
   height: 180px;
   width: 100%;
   border-radius: 15px 15px 0px 0px;
@@ -263,13 +271,11 @@ button {
   flex-direction: column;
   justify-content: space-around;
   padding: 30px 20px;
-  background-color: darkslategrey;
+  background-color: rgb(58, 58, 58);
   color: white;
 }
 .footer-logo {
-  width: 40%;
-  font-size: 10px;
-  color: white;
+  width: 35%;
 }
 .footer-logo img {
   width: 100%;
