--- a/css/style.css
+++ b/css/style.css
@@ -276,10 +276,16 @@ button {
 }
 .footer-logo {
   width: 35%;
+  filter: invert(100%);
+  margin-bottom: 12px;
 }
 .footer-logo img {
   width: 100%;
   height: 100%;
+}
+.footer p {
+  font-size: 18px;
+  margin-bottom: 0;
 }
 .footer-info {
   display: flex;
