--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -8,11 +8,18 @@
 
     &-logo {
         width: 35%;
+        filter: invert(100%);
+        margin-bottom: 12px;
     }
 
     &-logo img {
         width: 100%;
         height: 100%;
+    }
+
+    & p {
+        font-size: 18px;
+        margin-bottom: 0;
     }
 
     &-info {
