--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 /* Paramètres généraux du site web Ohmyfood */
 h1 {
   font-size: 21px;
-  font-weight: bold;
+  font-weight: bolder;
   font-family: "Roboto", sans-serif;
 }
 
@@ -172,13 +172,13 @@ button {
   justify-content: space-around;
   align-items: center;
 }
-.restaurants-orga-card a {
+.restaurants-orga-card {
   width: 100%;
   height: auto;
   text-decoration: none;
   color: black;
 }
-.restaurants-orga-card a span {
+.restaurants-orga-card span {
   position: relative;
   width: fit-content;
   top: 3rem;
@@ -200,7 +200,6 @@ button {
   padding-left: 0;
 }
 .restaurants-orga-card-image {
-  z-index: 1;
   height: 180px;
   width: 100%;
   border-radius: 15px 15px 0px 0px;
@@ -229,7 +228,7 @@ button {
 }
 .restaurants-orga-card-texte h2 {
   margin-top: 0;
-  margin-bottom: 5px;
+  margin-bottom: 0px;
 }
 .restaurants-orga-card-texte p {
   margin-top: 0;
