--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,11 @@
 @import "./base/titles";
-@import "./layouts/header-logo";
+@import "./layouts/header-accueil";
+@import "./layouts/banniere-img";
 @import "./layouts/localisation-form";
 @import "./layouts/reservation";
+@import "./layouts/button";
 @import "./layouts/box";
 @import "./layouts/fonctionnement";
 @import "./layouts/restaurants";
+@import "./layouts/orga-menu";
 @import "./layouts/footer";
