--- a/sass/main.css
+++ b/sass/main.css
@@ -2,7 +2,7 @@
 /* Paramètres généraux du site web Ohmyfood */
 h1 {
   font-size: 21px;
-  font-weight: bold;
+  font-weight: bolder;
   font-family: 'Roboto', sans-serif;
 }
 
@@ -42,6 +42,14 @@ header {
 .header-logo img {
   width: 100%;
   height: 100%;
+}
+
+/* Mise en page de la bannière d'image sur les pages des restaurants */
+.banniere-img img {
+  height: 250px;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 /* Mise en page du formulaire dans le header */
@@ -135,6 +143,7 @@ header {
   margin-bottom: 25px;
 }
 
+/* Design bouton dégradé */
 button {
   color: white;
   font-weight: bolder;
@@ -153,7 +162,6 @@ button {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  justify-items: center;
   height: auto;
   width: 100%;
   margin-bottom: 30px;
@@ -277,14 +285,14 @@ button {
           align-items: center;
 }
 
-.restaurants-orga-card a {
+.restaurants-orga-card {
   width: 100%;
   height: auto;
   text-decoration: none;
   color: black;
 }
 
-.restaurants-orga-card a span {
+.restaurants-orga-card span {
   position: relative;
   width: -webkit-fit-content;
   width: -moz-fit-content;
@@ -318,7 +326,6 @@ button {
 }
 
 .restaurants-orga-card-image {
-  z-index: 1;
   height: 180px;
   width: 100%;
   border-radius: 15px 15px 0px 0px;
@@ -364,7 +371,7 @@ button {
 
 .restaurants-orga-card-texte h2 {
   margin-top: 0;
-  margin-bottom: 5px;
+  margin-bottom: 0px;
 }
 
 .restaurants-orga-card-texte p {
@@ -442,6 +449,21 @@ button {
           animation: progress-bar 1000ms;
 }
 
+/* Mise en page des menus */
+.menu {
+  border: 2px red solid;
+  border-radius: 35px 35px 0px 0px;
+  margin-top: -32px;
+}
+
+.menu-title {
+  display: inline-block;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
 .footer {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -459,11 +481,19 @@ button {
 
 .footer-logo {
   width: 35%;
+  -webkit-filter: invert(100%);
+          filter: invert(100%);
+  margin-bottom: 12px;
 }
 
 .footer-logo img {
   width: 100%;
   height: 100%;
+}
+
+.footer p {
+  font-size: 18px;
+  margin-bottom: 0;
 }
 
 .footer-info {
