--- a/sass/base/_titles.scss
+++ b/sass/base/_titles.scss
@@ -11,6 +11,20 @@ h2 {
     font-family: 'Roboto', sans-serif;
 }
 
+h3 {
+    font-size: 29px;
+}
+
+h4 {
+    text-transform: uppercase;
+    font-weight: normal;
+    font-size: 19px;
+}
+
+.bold {
+    font-weight: bold;
+}
+
 body {
     margin: 0;
     padding: 0;
