--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -19,14 +19,22 @@
 
     & p {
         font-size: 18px;
+        padding-bottom: 0;
         margin-bottom: 0;
+        padding-top: 0;
+        margin-top: 8px;
+    }
+
+    & a {
+        text-decoration: none;
+        color: white;
     }
 
     &-info {
         display: flex;
         flex-direction: row;
         justify-content: flex-start;
-        align-items: center;
+        align-items: flex-end;
 
         & span {
             width: 5%;
