--- a/sass/layouts/_button.scss
+++ b/sass/layouts/_button.scss
@@ -9,3 +9,9 @@ button {
     padding: 15px 20px;
     font-family: 'Shrikhand', sans-serif;
 }
+
+.button {
+    display: flex;
+    justify-content: center;
+    
+}
