--- a/sass/layouts/_header-accueil.scss
+++ b/sass/layouts/_header-accueil.scss
@@ -1,14 +1,25 @@
 /* Mise en page du header */
 
-header {
+.header-accueil {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
+.header-resto {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 85%;
+}
+
+.header-arrow {
+  font-size: 25px;
+}
+
 .header-logo {
-  width: 40%;
+  width: 45%;
   padding: 12px;
 }
 
