--- a/sass/layouts/_orga-menu.scss
+++ b/sass/layouts/_orga-menu.scss
@@ -5,7 +5,8 @@
     margin-top: -32px;
     display: inline-block;
     background-color: white;
-    padding: 0px 20px;
+    padding: 30px 20px;
+    margin-bottom: 30px;
 }
 
 .menu-title {
@@ -14,17 +15,19 @@
     justify-content: space-around;
 }
 
-.entrees-description {
-    display: flex;
-    flex-direction: column;
-}
-
 .card {
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: stretch;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 15px;
     
+}
+
+.entrees-price {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
 }
 
 
