--- a/css/style.css
+++ b/css/style.css
@@ -217,10 +217,9 @@ button {
   color: black;
 }
 .restaurants-orga-card span {
-  position: relative;
+  position: absolute;
   width: fit-content;
-  top: 3rem;
-  right: 1rem;
+  margin: 0.7rem;
   background-color: #99E2D0;
   color: green;
   font-weight: bold;
