--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,10 @@ h3 {
 h4 {
   text-transform: uppercase;
   font-weight: normal;
-  font-size: 19px;
+  font-size: 17px;
+  padding-bottom: 5px;
+  border-bottom: 3px solid #99E2D0;
+  display: inline-block;
 }
 
 .bold {
@@ -137,7 +140,6 @@ button {
   display: grid;
   align-items: center;
   height: auto;
-  width: 100%;
   margin-bottom: 30px;
   border-radius: 15px;
   box-shadow: 5px 5px 10px rgb(231, 229, 229);
@@ -155,6 +157,7 @@ button {
 .fonctionnement-box {
   display: flex;
   justify-content: flex-start;
+  width: 100%;
   background-color: #fcf9f9;
   padding: 5px 0px;
 }
@@ -321,11 +324,14 @@ button {
 .card {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: flex-start;
-  padding: 15px;
+  padding: 10px;
 }
-
-.entrees-price {
+.card p {
+  margin: 4px;
+}
+.card-price {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
