--- a/sass/base/_titles.scss
+++ b/sass/base/_titles.scss
@@ -18,7 +18,10 @@ h3 {
 h4 {
     text-transform: uppercase;
     font-weight: normal;
-    font-size: 19px;
+    font-size: 17px;
+    padding-bottom: 5px;
+    border-bottom: 3px solid #99E2D0;
+   display: inline-block;
 }
 
 .bold {
