--- a/sass/layouts/_fonctionnement.scss
+++ b/sass/layouts/_fonctionnement.scss
@@ -11,6 +11,7 @@
     &-box {
         display: flex;
         justify-content: flex-start;
+        width: 100%;
         background-color: #fcf9f9;
         padding: 5px 0px;
         &:hover {
