--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,10 @@ h4 {
   text-transform: uppercase;
   font-weight: normal;
   font-size: 17px;
-  padding-bottom: 5px;
+}
+h4 span {
   border-bottom: 3px solid #99E2D0;
-  display: inline-block;
+  padding-bottom: 5px;
 }
 
 .bold {
