--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ h2 {
 }
 
 h3 {
-  font-size: 29px;
+  font-size: 25px;
 }
 
 h4 {
@@ -134,6 +134,9 @@ button {
 .button {
   display: flex;
   justify-content: center;
+}
+.button-com {
+  width: 48%;
 }
 
 /* Paramètres des box */
@@ -312,8 +315,8 @@ button {
   margin-top: -32px;
   display: inline-block;
   background-color: white;
-  padding: 30px 20px;
-  margin-bottom: 30px;
+  padding: 10px 20px;
+  margin-bottom: 50px;
 }
 
 .menu-title {
