--- a/sass/base/_polices.scss
+++ b/sass/base/_polices.scss
@@ -2,10 +2,8 @@
 /* titles : Shrikhand */
 @font-face {
     font-family: 'Shrikhand';
-    src: url();
+    src: url("");
 }
-@import url('https://fonts.googleapis.com/css2? family= Shrikhand & display=swap');
-
 /* txt : Roboto */
 @font-face {
     font-family: 'Roboto';
